2008-02-20  Stéphane Charette <stephanecharette@gmail.com>
	* po/POTFILES.in: added Report->View->Not Related
	* src/plugins/Makefile.am: added Report->View->Not Related
	* src/plugins/NotRelated.py: added Report->View->Not Related
	* src/plugins/NotRelated.glade: added Report->View->Not Related
	* src/plugins/FamilyLines.py: deleted (replaced by GVFamilyLines.py)

2008-02-20  Don Allingham  <don@gramps-project.org>
	* src/GrampsCfg.py: refactoring
	* src/gen/utils/test/callback_test.py: refactoring
	* src/gen/utils/callback.py: refactoring
	* src/gen/utils/longop.py: refactoring
	* src/gen/utils/__init__.py: refactoring
	* src/gen/db/base.py: refactoring
	* src/gen/Makefile.am: refactoring
	* src/DisplayState.py: refactoring
	* src/DbState.py: refactoring
	* src/PluginUtils/_MenuOptions.py: refactoring
	* src/ListModel.py: refactoring
	* src/BaseDoc.py: refactoring

2008-02-20 Brian Matherly <brian@gramps-project.org>
	* src/plugins/Verify.py:
	0001792: Tools->Utilities->Verify the Data (exclude married names)

2008-02-20  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/GrampsDbUtils/_GedcomUtils.py: (IdMapper.get_translate()) return 
	value of dict instead of boolean. Fix #0001708

2008-02-20 Frederik De Richter <frederik.de.richter@pandora.be>
    * src/Merge/_MergePerson.py
    * src/Merge/_MergeSource.py
    * src/Merge/_MergePlace.py
    links to wiki manual

2008-02-20  Peter Landgren <peter.talken@telia.com>
    * src/plugins/rel_sv.py: pylint clean up

2008-02-20  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/DisplayTabs/_PersonRefEmbedList.py: change _o mnemonic to not 
    interfere with OK button.

2008-02-20 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DbManager.py: #1725, ENTER, double-click if OK button sensitive only

2008-02-19 Brian Matherly <brian@gramps-project.org>
	* src/plugins/Summary.py:
	* src/plugins/CountAncestors.py:
	Remove person parameter.

2008-02-19  Douglas S. Blank  <dblank@cs.brynmawr.edu>